--- a/LearningResource/static/css/BasicModulesPage.css
+++ b/LearningResource/static/css/BasicModulesPage.css
@@ -1,4 +1,14 @@
-.logo-icon4 {
+@keyframes slide-in-right {
+  0% {
+    transform: translateX(200px);
+    opacity: 0;
+  }
+  to {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+.logo-icon6 {
   position: relative;
   width: 165px;
   height: 100px;
@@ -12,66 +22,66 @@
   align-items: center;
   justify-content: space-between;
 }
-.learning-modules5 {
+.learning-modules7 {
   position: relative;
 }
-.learning-modules5:hover {
+.learning-modules7:hover {
   color: var(--color-salmon);
 }
-.learning-modules4,
-.links2 {
+.learning-modules6,
+.links3 {
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: flex-start;
 }
-.learning-modules4 {
+.learning-modules6 {
   text-decoration: none;
   padding: var(--padding-3xs) var(--padding-xl);
   color: inherit;
 }
-.learning-modules4:hover {
+.learning-modules6:hover {
   cursor: pointer;
 }
-.links2 {
+.links3 {
   gap: var(--gap-3xs);
 }
-.menu2,
-.vector-icon8 {
-  width: 64px;
-  height: 48px;
-}
-.vector-icon8 {
+.vector-icon11 {
   position: absolute;
   top: 0;
   left: 0;
+  width: 64px;
+  height: 48px;
 }
-.menu2 {
+.menu3 {
   cursor: pointer;
   border: 0;
   padding: 0;
   background-color: transparent;
   position: relative;
+  width: 64px;
+  height: 48px;
   display: none;
 }
-.profile-pic-icon3 {
+.profile-pic-icon4 {
   position: relative;
   border-radius: var(--br-26xl);
   width: 75px;
   height: 75px;
   object-fit: cover;
 }
-.profile-pic-icon3:hover {
+.profile-pic-icon4:hover,
+.profile-pic-icon6:hover {
   box-shadow: 1px 3px 6px 2px rgba(0, 0, 0, 0.2);
 }
-.btn7,
-.profile-pic3,
-.student-home-nav2 {
+.btn8,
+.profile-pic4,
+.student-home-nav3 {
   display: flex;
   flex-direction: row;
   align-items: center;
 }
-.profile-pic3 {
+.profile-pic4 {
   cursor: pointer;
   border: 0;
   padding: 0;
@@ -79,15 +89,15 @@
   width: 75px;
   justify-content: space-between;
 }
-.btn7,
-.student-home-nav2 {
+.btn8,
+.student-home-nav3 {
   align-self: stretch;
 }
-.btn7 {
+.btn8 {
   justify-content: flex-start;
   gap: var(--gap-51xl);
 }
-.student-home-nav2 {
+.student-home-nav3 {
   margin: 0;
   background-color: var(--color-darkslategray);
   justify-content: space-between;
@@ -116,16 +126,16 @@
   cursor: pointer;
   color: inherit;
 }
-.round-child {
+.round-child8 {
   position: relative;
   border-radius: 50%;
   background-color: var(--neutral-4);
-  box-shadow: 0 11.290666580200195px 11.29px rgba(0, 0, 0, 0.25) inset;
+  box-shadow: 0 11.3px 11.29px rgba(0, 0, 0, 0.25) inset;
   width: 65px;
   height: 65px;
   z-index: 0;
 }
-.bicheck-icon {
+.bicheck-icon10 {
   position: absolute;
   margin: 0 !important;
   top: 7px;
@@ -137,7 +147,7 @@
   flex-shrink: 0;
   z-index: 1;
 }
-.round {
+.round10 {
   border-radius: 141.13px;
   overflow: hidden;
   display: flex;
@@ -178,7 +188,7 @@
 }
 .access-to-concept,
 .concept-modules-button,
-.links3 {
+.links4 {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -193,7 +203,7 @@
   text-decoration: none;
 }
 .access-to-concept,
-.links3 {
+.links4 {
   flex-direction: column;
 }
 .access-to-concept {
@@ -202,25 +212,25 @@
   font-size: var(--font-size-9xl);
   color: var(--color-black);
 }
-.links3 {
+.links4 {
   align-self: stretch;
   background-color: var(--color-oldlace);
   padding: var(--padding-41xl) 0;
   gap: var(--gap-51xl);
 }
-.feedback7,
-.send-us-a3 {
+.feedback9,
+.send-us-a4 {
   position: relative;
   font-size: var(--font-size-9xl);
   font-family: var(--font-inter);
   color: var(--color-black);
   text-align: left;
 }
-.send-us-a3 {
+.send-us-a4 {
   align-self: stretch;
   font-size: var(--font-size-5xl);
 }
-.text7 {
+.text9 {
   align-self: stretch;
   display: flex;
   flex-direction: column;
@@ -228,7 +238,7 @@
   justify-content: flex-start;
   gap: var(--gap-3xs);
 }
-.fullname-textbox3 {
+.fullname-textbox4 {
   border: 0;
   font-family: var(--font-inter);
   font-size: var(--font-size-xl);
@@ -237,15 +247,15 @@
   justify-content: center;
   padding: var(--padding-3xs) var(--padding-mini);
 }
-.fullname-textbox3,
-.message-textbook3,
-.text-box3 {
+.fullname-textbox4,
+.message-textbook4,
+.text-box4 {
   align-self: stretch;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
 }
-.message-textbook3 {
+.message-textbook4 {
   border: 0;
   font-family: var(--font-inter);
   font-size: var(--font-size-xl);
@@ -254,27 +264,27 @@
   justify-content: flex-start;
   padding: var(--padding-3xs) var(--padding-mini) var(--padding-161xl);
 }
-.text-box3 {
+.text-box4 {
   justify-content: center;
   gap: var(--gap-xl);
 }
-.submit3 {
+.submit4 {
   position: relative;
   font-size: var(--font-size-xl);
   font-family: var(--font-inter);
   color: var(--color-lavenderblush);
   text-align: left;
 }
-.contact-form3,
-.submit-btn3 {
+.contact-form4,
+.submit-btn4 {
   display: flex;
   flex-direction: column;
 }
-.submit-btn3 {
+.submit-btn4 {
   cursor: pointer;
   border: 0;
   padding: var(--padding-3xs) var(--padding-11xl);
-  background-color: var(--color-gray-300);
+  background-color: var(--color-gray-600);
   border-radius: var(--br-mini);
   box-shadow: 4px 4px 20px rgba(140, 120, 120, 0.6);
   height: 59px;
@@ -282,24 +292,24 @@
   justify-content: center;
   box-sizing: border-box;
 }
-.contact-form3 {
+.contact-form4 {
   flex: 1;
   align-items: flex-start;
   justify-content: flex-start;
   gap: var(--gap-xl);
 }
-.site-map7 {
+.site-map9 {
   align-self: stretch;
   position: relative;
 }
-.all-our-pages3 {
+.all-our-pages4 {
   position: relative;
   display: inline-block;
   width: 175px;
   height: 35px;
   flex-shrink: 0;
 }
-.text8 {
+.text10 {
   align-self: stretch;
   overflow: hidden;
   display: flex;
@@ -308,7 +318,7 @@
   justify-content: center;
   font-size: var(--font-size-5xl);
 }
-.about-us3 {
+.about-us4 {
   cursor: pointer;
   border: 0;
   padding: 0;
@@ -320,35 +330,35 @@
   text-align: left;
   display: inline-block;
 }
-.link3,
-.site-map6 {
+.link4,
+.site-map8 {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   gap: var(--gap-mini);
 }
-.link3 {
+.link4 {
   align-self: stretch;
   overflow: hidden;
   justify-content: flex-start;
 }
-.site-map6 {
+.site-map8 {
   justify-content: center;
   padding: var(--padding-6xl) var(--padding-81xl) var(--padding-6xl)
     var(--padding-31xl);
 }
-.logo-feedback-icon3 {
+.logo-feedback-icon4 {
   position: relative;
   width: 243px;
   height: 145px;
   object-fit: cover;
 }
-.vector-icon9 {
+.vector-icon12 {
   position: relative;
   width: 65px;
   height: 55px;
 }
-.phone3 {
+.phone4 {
   align-self: stretch;
   flex: 1;
   display: flex;
@@ -357,35 +367,35 @@
   justify-content: flex-start;
   gap: var(--gap-21xl);
 }
-.vector-icon10 {
+.vector-icon13 {
   position: relative;
   width: 65px;
   height: 50px;
 }
-.email3,
-.info3 {
+.email4,
+.info4 {
   align-self: stretch;
   display: flex;
   align-items: center;
 }
-.email3 {
+.email4 {
   flex: 1;
   flex-direction: row;
   justify-content: flex-start;
   gap: var(--gap-21xl);
 }
-.info3 {
+.info4 {
   height: 135px;
   flex-direction: column;
   justify-content: center;
   gap: var(--gap-11xl);
 }
-.contact-info3,
-.feedback6 {
+.contact-info4,
+.feedback8 {
   display: flex;
   align-items: flex-start;
 }
-.contact-info3 {
+.contact-info4 {
   flex: 1;
   flex-direction: column;
   justify-content: center;
@@ -395,7 +405,7 @@
   font-size: var(--font-size-xl);
   color: var(--color-gray-200);
 }
-.feedback6 {
+.feedback8 {
   align-self: stretch;
   background-color: var(--color-gainsboro-100);
   flex-direction: row;
@@ -405,18 +415,18 @@
   font-size: var(--font-size-9xl);
   color: var(--color-black);
 }
-.copyright-2023-all4 {
+.copyright-2023-all5 {
   margin: 0;
   align-self: stretch;
   position: relative;
 }
-.footer4,
+.footer5,
 .learning-modules-page {
   display: flex;
   flex-direction: column;
   font-family: var(--font-inter);
 }
-.footer4 {
+.footer5 {
   align-self: stretch;
   background-color: var(--color-oldlace);
   align-items: center;
@@ -440,69 +450,152 @@
   .modules {
     flex-direction: column;
   }
-  .contact-form3 {
+  .contact-form4 {
     flex: unset;
     align-self: stretch;
   }
-  .site-map7 {
+  .site-map9 {
     text-align: center;
   }
-  .link3,
-  .text8 {
+  .link4,
+  .text10 {
     align-items: center;
     justify-content: center;
   }
-  .email3,
-  .phone3,
-  .site-map6 {
+  .email4,
+  .phone4,
+  .site-map8 {
     flex-direction: column;
     align-items: flex-start;
     justify-content: center;
   }
-  .email3,
-  .phone3 {
+  .email4,
+  .phone4 {
     width: auto;
     align-self: unset;
     align-items: center;
   }
-  .phone3 {
+  .phone4 {
     gap: var(--gap-11xl);
     padding-right: 0;
     box-sizing: border-box;
   }
-  .email3 {
+  .email4 {
     gap: var(--gap-21xl);
   }
-  .info3 {
+  .info4 {
     gap: var(--gap-31xl);
   }
-  .contact-info3,
-  .feedback6 {
+  .contact-info4,
+  .feedback8 {
     gap: var(--gap-81xl);
     align-items: center;
   }
-  .contact-info3 {
+  .contact-info4 {
     justify-content: center;
     flex: unset;
     align-self: stretch;
   }
-  .feedback6 {
+  .feedback8 {
     flex-direction: column;
     justify-content: space-between;
   }
 }
 @media screen and (max-width: 960px) {
-  .links2 {
+  .links3 {
     display: none;
   }
-  .menu2,
-  .vector-icon8 {
+  .menu3,
+  .vector-icon11 {
     display: flex;
   }
-  .btn7 {
+  .btn8 {
     gap: var(--gap-11xl);
   }
   .modules {
     flex-direction: column;
   }
+}
+.profile-pic-icon6 {
+  position: relative;
+  border-radius: var(--br-26xl);
+  width: 75px;
+  height: 75px;
+  object-fit: cover;
+}
+.hello-itunghsieh {
+  position: relative;
+}
+.edit-your-profile {
+  text-decoration: none;
+  position: relative;
+  font-size: var(--font-size-xl);
+  color: #065fd4;
+}
+.btn10:hover,
+.edit-your-profile:hover {
+  cursor: pointer;
+}
+.hello-itunghsieh-parent {
+  flex-direction: column;
+  gap: var(--gap-mini);
+}
+.drop-view-inner,
+.hello-itunghsieh-parent,
+.profile-pic-parent {
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+}
+.profile-pic-parent {
+  flex-direction: row;
+  gap: var(--gap-31xl);
+}
+.drop-view-inner {
+  align-self: stretch;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.5);
+  flex-direction: column;
+  padding: var(--padding-mini) 26px;
+  font-size: var(--font-size-5xl);
+}
+.vector-icon17,
+.vector-icon18 {
+  position: relative;
+  width: 48px;
+  height: 48px;
+}
+.vector-icon18 {
+  display: none;
+}
+.btn10,
+.drop-view {
+  display: flex;
+  justify-content: flex-start;
+}
+.btn10 {
+  text-decoration: none;
+  flex-direction: row;
+  align-items: center;
+  padding: var(--padding-xl) var(--padding-11xl);
+  gap: var(--gap-21xl);
+  color: inherit;
+}
+.drop-view {
+  position: relative;
+  border-radius: var(--br-xl);
+  background-color: var(--color-white);
+  width: 391px;
+  overflow: hidden;
+  flex-direction: column;
+  align-items: flex-start;
+  opacity: 0;
+  height: 100%;
+  max-width: 90%;
+  text-align: center;
+  font-size: var(--font-size-xl);
+  color: var(--color-black);
+  font-family: var(--font-inter);
+}
+.drop-view.animate {
+  animation: 0.25s ease 0s 1 normal forwards slide-in-right;
 }
