--- a/QuizChallengeSystem/templates/quiz.html
+++ b/QuizChallengeSystem/templates/quiz.html
@@ -1,42 +1,42 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Quiz</title>
+{% extends 'base_generic.html' %}
+{% load static %}
+
+{% block title %}
+    Quiz
+{% endblock %}
+
+{% block css %}
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-</head>
-<body class="bg-light">
+    <link rel="stylesheet" href="{% static 'css/quiz.css' %}"/>
+{% endblock %}
 
-<div class="container mt-5">
-    <div class="row">
-        <div class="col-md-8 offset-md-2">
-            <div class="card">
-                <div class="card-header bg-info text-white">
-                    Quiz Questions
-                </div>
-                <div class="card-body">
-                    <form method="post">
-                        {% csrf_token %}
+{% block css-container %}
+{% endblock %}
 
-                        {% for field in form %}
-                            <div class="form-group">
-                                <label>{{ forloop.counter }}. {{ field.label }}</label>
-                                {{ field }}
-                            </div>
-                        {% endfor %}
+{% block content %}
+    <div class="container mt-5">
+        <div class="row">
+            <div class="col-md-8 offset-md-2 quiz">
+                <div class="card">
+                    <div class="card-header quiz-info text-white">
+                        Quiz Questions
+                    </div>
+                    <div class="card-body card card-color">
+                        <form method="post">
+                            {% csrf_token %}
 
-                        <button type="submit" class="btn btn-success">Submit</button>
-                    </form>
+                            {% for field in form %}
+                                <div class="form-group">
+                                    <label>{{ forloop.counter }}. {{ field.label }}</label>
+                                    {{ field }}
+                                </div>
+                            {% endfor %}
+
+                            <button type="submit" class="btn btn-success">Submit</button>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
-
-<!-- Optional: Include Bootstrap JS and jQuery if needed -->
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-
-</body>
-</html>
+{% endblock %}
